src/scss/components/list_page/nav.scss
.list-page-nav {
  padding: 0 25px;
  height: 100%;
  overflow-y: auto;

  li.is-group {
    margin: 10px 0;
    padding: 0;
  }
}

.list-page-nav-header {
  display: block;
  font-size: 13px;
  font-weight: 500;
  margin: 10px 0;
  color: #0c0d0d;
}

.list-page-nav-item {
  color: #696e6f;
  font-size: 14px;
  font-weight: 500;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
  padding: 10px 15px;

  &:hover {
    text-decoration: none;
    color: #0c0d0d;
  }

  &.active {
    color: #696e6f;
    border-radius: 8px;
    background-color: #dce3e6;
  }

  .ledger-icons {
    margin-right: 5px;
  }

  .badge {
    float: right;

    &:empty {
      display: none;
    }
  }
}

